src/vistas/Home.module.scss
@use "../fontsAndVariables" as *;

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  20% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.mainTag {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 10rem 0rem;
}

.headerTag {
  display: flex;
  flex-direction: column;
  align-items: center;

  .mainLetterTranslatorContainer {
    overflow: hidden;
    height: 6.5rem;
  }

  .skipAnimationButtonPositioner {
    position: absolute;
    top: 6vh;
    right: 10vw;
  }
}

.profilePositioner {
  margin-top: 10rem;
}

.mainButtonsContainer {
  display: flex;
  column-gap: 4rem;
  width: 100%;
  margin: 2rem 0rem 0rem 2rem;
}

.animatedLinePositioner {
  width: 85%;
  margin-top: 12rem;
}

.fadeInAnimation {
  animation: fade-in 2s linear;
}

.sectionsCommonStyles {
  width: 85%;
  margin-top: 2rem;
  padding-left: 2rem;
}

.projectsSectionContainer {
  background: radial-gradient(
    ellipse at 50% 50%,
    rgba(80, 116, 146, 0.6),
    rgb(8, 11, 26) 60%
  );

  .proyectCardsContainer {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    column-gap: 3rem;
    row-gap: 3rem;
    width: 100%;
    margin: 3rem 0rem;
    padding: 3rem;
  }
}

.techItemsContainer {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  width: 40%;
  column-gap: 4rem;
  row-gap: 4rem;
  margin: 10rem auto 4rem;
  background: radial-gradient(
    ellipse at 50% 50%,
    rgba(80, 116, 146, 0.218),
    rgb(8, 11, 26) 74%
  );
}

// .techSectionContainer {
// }

// **********************************************RESPONSIVE

//***********************************HD

@media (min-width: 1920px) {
  .mainTag {
    padding: 12rem 0rem;
  }

  .headerTag {
    .mainLetterTranslatorContainer {
      margin-top: 1rem;
    }
  }

  .profilePositioner {
    margin-top: 14rem;
  }

  .mainButtonsContainer {
    column-gap: 6rem;
    width: 100%;
    margin: 3rem 0rem 0rem 4rem;
  }

  .animatedLinePositioner {
    margin-top: 18rem;
  }

  .techItemsContainer {
    width: 42%;
    column-gap: 5rem;
    row-gap: 5rem;
    margin: 11rem auto 4rem;
  }
}

@media (min-width: 2560px) {
  .mainTag {
    padding: 15rem 0rem;
  }

  .headerTag {
    .mainLetterTranslatorContainer {
      margin-top: 4rem;
    }
  }

  .profilePositioner {
    margin-top: 22rem;
  }

  .animatedLinePositioner {
    margin-top: 24rem;
  }

  .sectionsCommonStyles {
    margin-top: 5rem;
  }
  .sectionHeaderContainer {
    padding-left: 2vw;
  }

  .techItemsContainer {
    margin: 17rem auto 4rem;
  }
}

@media (min-width: 3840px) {
  .mainTag {
    padding: 22rem 0rem;
  }

  .headerTag {
    .mainLetterTranslatorContainer {
      overflow: visible;
      height: 10rem;
      margin-top: 12rem;
    }
  }

  .profilePositioner {
    margin-top: 32rem;
  }

  .mainButtonsContainer {
    column-gap: 6rem;
    width: 100%;
    margin: 5rem 0rem 0rem 4rem;
  }

  .animatedLinePositioner {
    margin-top: 40rem;
  }

  .sectionsCommonStyles {
    margin-top: 7rem;
  }

  .projectsSectionContainer {
    .proyectCardsContainer {
      column-gap: 6rem;
      row-gap: 6rem;
      margin: 16rem 0rem 6rem 0rem;
      padding: 3rem;
    }
  }

  .techItemsContainer {
    width: 40%;
    column-gap: 6rem;
    row-gap: 6rem;
    margin: 22rem auto 6rem;
  }
}

//***********************************LOWER RESOLUTIONS

@media (max-width: 1650px) {
  .animatedLinePositioner {
    width: 90%;
  }

  .sectionsCommonStyles {
    width: 90%;
    padding-left: 0rem;
  }

  .projectsSectionContainer {
    .proyectCardsContainer {
      column-gap: 3rem;
      row-gap: 3rem;
      margin: 3rem 0rem 0rem 0rem;
      padding: 2rem;
    }
  }

  .sectionHeaderContainer {
    padding-left: 2vw;
  }
}

@media (max-width: 1500px) {
  .techItemsContainer {
    width: 43%;
    column-gap: 3.5rem;
    row-gap: 3.5rem;
    margin: 10rem auto 4rem;
  }
}

@media (max-width: 1280px) {
  .techItemsContainer {
    width: 47%;
  }
}

@media (max-width: 1024px) {
  .headerTag {
    .skipAnimationButtonPositioner {
      top: 5rem;
      right: 4rem;
    }
  }

  .profilePositioner {
    margin-top: 8rem;
  }

  .techItemsContainer {
    width: 55%;
    column-gap: 2.8rem;
    row-gap: 2.8rem;
    margin: 9rem auto 3rem;
  }
}

@media (max-width: 900px) {
  .headerTag {
    .skipAnimationButtonPositioner {
      top: 5rem;
      right: 0.3rem;
    }
  }

  .animatedLinePositioner {
    width: 90%;
  }

  .sectionsCommonStyles {
    width: 90%;
  }

  .projectsSectionContainer {
    .proyectCardsContainer {
      column-gap: 2.5rem;
      row-gap: 2.5rem;
      margin: 2.5rem 0rem 0rem 0rem;
      padding: 1rem;
    }
  }

  .techItemsContainer {
    width: 71%;
    column-gap: 2.5rem;
    row-gap: 2.5rem;
    margin: 8rem auto 2rem;
  }
}

@media (max-width: 800px) {
  .profilePositioner {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  .mainButtonsContainer {
    column-gap: 4rem;
    width: 90%;
    margin: 2rem 0rem 0rem 2rem;
  }

  .sectionsCommonStyles {
    width: 100%;
  }

  .sectionHeaderContainer {
    padding-left: 8vw;
  }
}

@media (max-width: 700px) {
  .headerTag {
    .mainLetterTranslatorContainer {
      margin-top: -1rem;
    }
  }

  .animatedLinePositioner {
    margin-top: 9rem;
  }

  .techItemsContainer {
    width: 80%;
    margin: 7rem auto 0rem;
  }
}

@media (max-width: 590px) {
  .headerTag {
    .skipAnimationButtonPositioner {
      top: 4rem;
    }
  }

  .profilePositioner {
    margin-top: 6rem;
  }

  .mainButtonsContainer {
    column-gap: 3rem;
    width: 95%;
    margin: 2rem 0rem 0rem 2rem;
  }

  .techItemsContainer {
    width: 85%;
    column-gap: 2.5rem;
    row-gap: 2.5rem;
    margin: 7rem auto 0rem;
  }
}

@media (max-width: 520px) {
  .headerTag {
    .mainLetterTranslatorContainer {
      margin-top: -1.5rem;
    }
  }

  .profilePositioner {
    margin-top: 5rem;
  }

  .animatedLinePositioner {
    margin-top: 8rem;
  }
}

@media (max-width: 419px) {
  .mainButtonsContainer {
    column-gap: 2rem;
    width: 95%;
    margin: 1.8rem 0rem 0rem 2rem;
  }
}

@media (max-width: 400px) {
  .headerTag {
    .mainLetterTranslatorContainer {
      margin-top: -1.8rem;
    }
  }

  .mainButtonsContainer {
    column-gap: 1rem;
    width: 100%;
    margin: 1.8rem 0rem 0rem 2rem;
  }
}

